# SlicerBoneDifference

./: .gitignore  CMakeLists.txt
BoneDifference/: BoneDifference.py  CMakeLists.txt  binarize.py  register.py
BoneDifference/Resources/UI/: BoneDifference.ui
BoneDifference/Scripts/: README.md  process_files.py
